--- a/BACKEND/girls_for_girls/pom.xml
+++ b/BACKEND/girls_for_girls/pom.xml
@@ -96,7 +96,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${project.parent.version}</version>
 				<configuration>
-					<mainClass>com.neobis.g4g.girls_for_girls.GirlsForGirlsApplication.App</mainClass>
+					<mainClass>com.neobis.g4g.girls_for_girls.GirlsForGirlsApplication</mainClass>
 					<layout>ZIP</layout>
 				</configuration>
 			</plugin>
@@ -106,6 +106,11 @@
 				<configuration>
 					<skipTests>true</skipTests>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version>
 			</plugin>
 		</plugins>
 	</build>
