--- a/BACKEND/girls_for_girls/pom.xml
+++ b/BACKEND/girls_for_girls/pom.xml
@@ -102,23 +102,22 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>${project.parent.version}</version>
-				<configuration>
-					<mainClass>com.neobis.g4g.girls_for_girls.GirlsForGirlsApplication</mainClass>
-					<layout>ZIP</layout>
-				</configuration>
+				<version>2.0.6.RELEASE</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
 				<configuration>
 					<skipTests>true</skipTests>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.10.1</version>
 			</plugin>
 		</plugins>
 	</build>
